* ext/dl/cfunc.c (rb_dlcfunc_inspect): get rid of overflow.
* ext/dl/closure.c (dlc_callback, rb_dlclosure_init): ditto.

* ext/dl/cptr.c (rb_dlptr_s_malloc): ditto.

* ext/dl/method.c (rb_dlfunction_initialize): ditto.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26693 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Wed Feb 17 14:26:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/dl/cfunc.c (rb_dlcfunc_inspect): get rid of overflow.
+
+	* ext/dl/closure.c (dlc_callback, rb_dlclosure_init): ditto.
+
+	* ext/dl/cptr.c (rb_dlptr_s_malloc): ditto.
+
+	* ext/dl/method.c (rb_dlfunction_initialize): ditto.
+
 Wed Feb 17 01:16:12 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* hash.c (hash_update): always raise an exception when adding a new
