* ext/dl/dl_conversions.c (rb_dl_type_to_ffi_type): support signed   long long.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26694 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-Wed Feb 17 14:26:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Wed Feb 17 15:34:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/dl/dl_conversions.c (rb_dl_type_to_ffi_type): support signed
+	  long long.
 
 	* ext/dl/cfunc.c (rb_dlcfunc_inspect): get rid of overflow.
 
