--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb 18 21:50:00 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c (pack_unpack): call PACK_ITEM_ADJUST for 'Q'.
+
 Thu Feb 18 02:14:26 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* io.c (io_fread, io_getpartial, io_read, io_sysread): by using lock,
