--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 18 22:28:00 2010  Kenta Murata  <mrkn@mrkn.jp>
+
+	* confiure.in: new --with-ext and --with-out-ext options for extmk.
+	* tool/mkconfig.rb: normalizing --with-out-ext to --without-ext.
+
 Thu Feb 18 21:50:00 2010  Tanaka Akira  <akr@fsij.org>
 
 	* pack.c (pack_unpack): call PACK_ITEM_ADJUST for 'Q'.
