* lib/drb/drb.rb (DRbServer#stop_service): join killed thread to   ensure service stops.  [ruby-dev:40441]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26708 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb 19 00:04:19 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* lib/drb/drb.rb (DRbServer#stop_service): join killed thread to
+	  ensure service stops.  [ruby-dev:40441]
+
 Thu Feb 18 22:31:15 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* math.c (math_atanh): raise ERANGE without calling atanh if absolute
