--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Feb 22 21:35:33 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/digest/sha2/sha2init.c: test OpenSSL more strictly.
+
 Mon Feb 22 11:52:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rubygems: update to 1.3.6.
