--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb 24 00:39:17 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* string.c (str_new_empty): String#split, partition, rpartition
+	  taints the resulting strings if self is tainted.
+
 Mon Feb 22 21:35:33 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/digest/sha2/sha2init.c: test OpenSSL more strictly.
