--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Wed Feb 24 00:50:09 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/openssl/ossl_digest.c (GetDigestPtr): Allow to pass the
+	  OpenSSL::Digest class in place of where either an instance of
+	  the class or the algorithm name was demanded.  For example,
+	  OpenSSL::HMAC.digest(OpenSSL::Digest::SHA1, key, data) is now
+	  accepted as well as the usual
+	  OpenSSL::HMAC.digest(OpenSSL::Digest::SHA1.new, key, data) and
+	  OpenSSL::HMAC.digest("SHA1", key, data).
+
 Wed Feb 24 00:39:17 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* string.c (str_new_empty): String#split, partition, rpartition
