--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Feb 24 00:51:14 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/openssl/ossl_hmac.c (Init_ossl_hmac): Make OpenSSL::HMAC a
+	  subclass of Digest::Class so it can take advantage of all those
+	  utility methods such as base64digest.
+
 Wed Feb 24 00:50:09 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/openssl/ossl_digest.c (GetDigestPtr): Allow to pass the
