--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Feb 24 00:52:42 2010  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/openssl/lib/openssl/digest.rb (OpenSSL::Digest::hexdigest):
+	  No need to define hexdigest() here because the super method is
+	  properly defined to use digest() passing through arguments.
+
 Wed Feb 24 00:51:14 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/openssl/ossl_hmac.c (Init_ossl_hmac): Make OpenSSL::HMAC a
