* dln_find.c: split from dln.c.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26746 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb 24 09:54:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dln_find.c: split from dln.c.
+
 Wed Feb 24 09:31:33 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/digest/extconf.rb: use OpenSSL only when all transform
