* dln.c (translit_separator): moved back from load.c again.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26747 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Wed Feb 24 09:54:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Wed Feb 24 11:52:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dln.c (translit_separator): moved back from load.c again.
 
 	* dln_find.c: split from dln.c.
 
