--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Feb 24 22:39:15 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb: fix [ruby-core:28320] reported by Paul Clegg.
+	  (Resolv::DNS::Requester#request): raise ResolvTimeout
+	  consistently for timeout.
+
 Wed Feb 24 14:38:16 2010  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/indexer: Removed obsolete files.
