* pack.c (pack_unpack): don't use OFF32 for gcc 4.5.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26753 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb 25 00:29:55 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c (pack_unpack): don't use OFF32 for gcc 4.5.
+
 Wed Feb 24 22:39:15 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/resolv.rb: fix [ruby-core:28320] reported by Paul Clegg.
