* pack.c (swap64): don't redefine.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26755 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb 25 00:57:59 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c (swap64): don't redefine.
+
 Thu Feb 25 00:29:55 2010  Tanaka Akira  <akr@fsij.org>
 
 	* pack.c (pack_unpack): don't use OFF32 for gcc 4.5.
