--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Feb 25 22:59:46 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c: consider DYNAMIC_ENDIAN.  refactored.
+
 Thu Feb 25 11:17:01 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* rational.c (nurat_expt): use Float#** when Rational ** Float.
