* pack.c (pack_pack, pack_unpack): suppressed warnings.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26765 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 26 14:17:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* pack.c (pack_pack, pack_unpack): suppressed warnings.
+
 Fri Feb 26 07:44:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/dl: revert dl with libffi because it can't run on mswin now.
