* pack.c (swap64): fix for VC6.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26766 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 26 16:49:29 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* pack.c (swap64): fix for VC6.
+
 Fri Feb 26 14:17:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* pack.c (pack_pack, pack_unpack): suppressed warnings.
