* pack.c (QUAD_SIZE): it should be always 8.
* bignum.c (rb_quad_pack): use LONG_LONG version only if
  SIZEOF_LONG_LONG == QUAD_SIZE.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26767 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri Feb 26 20:07:48 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c (QUAD_SIZE): it should be always 8.
+
+	* bignum.c (rb_quad_pack): use LONG_LONG version only if
+	  SIZEOF_LONG_LONG == QUAD_SIZE.
+
 Fri Feb 26 16:49:29 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* pack.c (swap64): fix for VC6.
