* ext/socket/raddrinfo.c, ext/socket/udpsocket.c: avoid illegal cast   from void-returning function to VALUE-returning one.  It causes SEGV   on RubySpec with mingw32.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26768 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Feb 26 20:51:47 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/socket/raddrinfo.c, ext/socket/udpsocket.c: avoid illegal cast
+	  from void-returning function to VALUE-returning one.  It causes SEGV
+	  on RubySpec with mingw32.
+
 Fri Feb 26 20:07:48 2010  Tanaka Akira  <akr@fsij.org>
 
 	* pack.c (QUAD_SIZE): it should be always 8.
