* configure.in (RSHIFT): add parenthesis to supress warning.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26769 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Feb 26 21:29:48 2010  Tanaka Akira  <akr@fsij.org>
+
+	* configure.in (RSHIFT): add parenthesis to supress warning.
+
 Fri Feb 26 20:51:47 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* ext/socket/raddrinfo.c, ext/socket/udpsocket.c: avoid illegal cast
