* pack.c: check assuption on QUAD_SIZE and SIZEOF_LONG.
* bignum.c: check assuption on SIZEOF_LONG and SIZEOF_BDIGITS.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26773 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Feb 27 15:54:55 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c: check assuption on QUAD_SIZE and SIZEOF_LONG.
+
+	* bignum.c: check assuption on SIZEOF_LONG and SIZEOF_BDIGITS.
+
 Sat Feb 27 03:48:18 2010  Tanaka Akira  <akr@fsij.org>
 
 	* pack.c: fix q and Q for big endian environments which have no
