--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 28 00:38:18 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c: use integer types with explicit size.
+
 Sat Feb 27 15:54:55 2010  Tanaka Akira  <akr@fsij.org>
 
 	* pack.c: check assuption on QUAD_SIZE and SIZEOF_LONG.
