--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb 28 06:58:53 2010  Tanaka Akira  <akr@fsij.org>
+
+	* pack.c (swap32): use __builtin_bswap32 on gcc 4.3.0 or later.
+	  (swap64): ditto.
+
 Sun Feb 28 00:38:18 2010  Tanaka Akira  <akr@fsij.org>
 
 	* pack.c: use integer types with explicit size.
