--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sun Feb 28 11:42:55 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* test/openssl/{test_x509cert.rb,openssl,test_x509crl.rb,
+	  test_x509req.rb}:
+	  fix false positive tests because of OpenSSL spec change.
+	  patched by originally Hongli Lai [ruby-core:27417],
+	  and fixed by Motohiro KOSAKI [ruby-core:28063]
+
 Sun Feb 28 11:21:03 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/openssl/{test_x509cert.rb,openssl,test_x509req.rb}:
