* ext/pty/pty.c (get_device_once): raise on error when fail is   non-zero.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26786 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb 28 21:32:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/pty/pty.c (get_device_once): raise on error when fail is
+	  non-zero.
+
 Sun Feb 28 18:58:00 2010  Kenta Murata  <mrkn@mrkn.jp>
 
 	* math.c (rb_eMathDomainError): new exception class
