* configure.in (mingw): do not detect snprintf/vsnprintf.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26787 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  1 17:42:45 2010  wanabe  <s.wanabe@gmail.com>
+
+	* configure.in (mingw): do not detect snprintf/vsnprintf.
+
 Sun Feb 28 21:32:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/pty/pty.c (get_device_once): raise on error when fail is
