* ext/zlib/zlib.c (zstream_expand_buffer_into): remove compare different type values warning.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26789 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  1 20:07:06 2010  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>
+
+	* ext/zlib/zlib.c (zstream_expand_buffer_into): remove compare different type values warning.
+
 Mon Mar  1 17:42:45 2010  wanabe  <s.wanabe@gmail.com>
 
 	* configure.in (mingw): do not detect snprintf/vsnprintf.
