--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar  2 13:54:44 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* test/ruby/test_math.rb: Fix lgamma test
+
 Mon Mar  1 23:26:56 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pty/pty.c (pty_open): refine the path for master IO.
