--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Wed Mar  3 05:48:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Wed Mar  3 06:19:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (signbig): defined.
 
 	* win32/Makefile.sub, symbian/setup (config.h): pack.c requires
 	  SIZEOF_INT*_T now.
