* lib/matrix.rb (Vector#each2, collect2): small refactoring.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26802 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar  3 15:54:20 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* lib/matrix.rb (Vector#each2, collect2): small refactoring.
+
 Wed Mar  3 16:14:24 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* lib/matrix.rb (Vector#each): make Vector enumerable.  
