--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Mar  3 18:35:55 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* hash.c (rb_hash_select_bang): add #select! and keep_if to Hash.
+
+	* hash.c (env_select_bang): ..and to ENV.
+
 Wed Mar  3 15:54:20 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* lib/matrix.rb (Vector#each2, collect2): small refactoring.
