* complex.c (nucomp_real_check): raise TypeError instead of ArgumentError   when argument is not a real as expected [ruby-core:28395]
* rational.c (nurat_int_check): ditto (for integers)

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26805 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Mar  3 23:16:32 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
+
+	* complex.c (nucomp_real_check): raise TypeError instead of
+	  ArgumentError when argument is not a real as expected
+	  [ruby-core:28395]
+
+	* rational.c (nurat_int_check): ditto (for integers)
+
 Wed Mar  3 23:07:08 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/matrix.rb (Vector#each): Return self and optimization
