--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar  4 00:10:54 2010  Tanaka Akira  <akr@fsij.org>
+
+	* tool/transcode-tblgen.rb (HEX2): extracted from regexps.
+
 Wed Mar  3 23:16:32 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* complex.c (nucomp_real_check): raise TypeError instead of
