--- a/NEWS
+++ b/NEWS
@@ -35,6 +35,7 @@ with all sufficient information, see the ChangeLog file.
     * New methods:
       * Enumerable#join
       * Enumerable#chunk
+      * Enumerable#each_entry
       * Enumerable#slice_before
 
   * Enumerator
