* gc.c (gc_profile_total_time): add GC::Profiler.total_time.
* NEWS: ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26814 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar  4 13:14:34 2010  wanabe  <s.wanabe@gmail.com>
+
+	* gc.c (gc_profile_total_time): add GC::Profiler.total_time.
+
+	* NEWS: ditto.
+
 Thu Mar  4 10:15:10 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* complex.c (m_log, m_exp): remove unused functions.
