* io.c (io_s_write, io_s_binwrite): add File#write and #binwrite.   [ruby-core:21701]
* test/ruby/test_io.rb: add tests for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26816 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Mar  4 22:45:02 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* io.c (io_s_write, io_s_binwrite): add File#write and #binwrite.
+	  [ruby-core:21701]
+
+	* test/ruby/test_io.rb: add tests for above.
+
 Mon Mar  4 13:14:34 2010  wanabe  <s.wanabe@gmail.com>
 
 	* gc.c (gc_profile_total_time): add GC::Profiler.total_time.
