--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar  5 11:59:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* win32/win32.c (signbit): defined on mingw.
+
 Thu Mar  4 22:49:42 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* eval.c (setup_exception): avoid line number 0 when setting
