* io.c (pipe_open): suppressed a warning.
* win32/win32.c (rb_w32_map_errno, winnt_stat, rb_chsize): ditto.

* win32/win32.c (rb_w32_aspawn): get rid of overflow.


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26822 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Mar  5 17:51:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (pipe_open): suppressed a warning.
+
+	* win32/win32.c (rb_w32_map_errno, winnt_stat, rb_chsize): ditto.
+
+	* win32/win32.c (rb_w32_aspawn): get rid of overflow.
+
 Fri Mar  5 11:59:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* win32/win32.c (signbit): defined on mingw.
